--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Warm Wonders"/>
     <title> Warm Wonders</title>
     <script src="./javascript/script.js"></script> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">xs
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--fonts-->
 <link rel="stylesheet" href="./CSS/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
