--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Warm Wonders"/>
     <title> Warm Wonders</title>
-    <script src="./javascript/script.js"></script> 
+    <!--<script src="./javascript/script.js"></script> -->
+    <script src="./javascript/stringsOperatorsLoops.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--fonts-->
 <link rel="stylesheet" href="./CSS/style.css">
