--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Warm Wonders"/>
     <title> Warm Wonders</title>
-    <script src="./javascript/script.js"></script>
+<!--<script src="./javascript/script.js"></script>-->
+    <script src="./javascript/formValidation.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--fonts-->
 <link rel="stylesheet" href="./CSS/style.css">
@@ -30,10 +31,10 @@ el="stylesheet"/>
             </ul>
 <!--reg heading-->
             <ul class="nav-right">
-            <li><a href="#index">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#goal">GOAL</a></li>
             <li><a href="#recipes">RECIPES</a></li>
-            <li><a href="#contactus">CONTACT US</a></li>
+            <li><a href="contactUs.html">CONTACT US</a></li>
             </ul>
         </nav>
     </header>
@@ -114,10 +115,11 @@ el="stylesheet"/>
       <a href="mailto:apberlanga@mymail.tstc.edu">Andrea Berlanga</a>
       All Rights Reserved
     </p>
-  </footer>
+  </footer>z
   <!-- Add the paragraph to display the truth statement -->
   <p id="truth-paragraph"></p>
   
 </main>
 </body>
 </html>
+
