--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ el="stylesheet"/>
             <li><a href="#goal">GOAL</a></li>
             <li><a href="#recipes">RECIPES</a></li>
             <li><a href="#contactus">CONTACT US</a></li>
+            <li><a href="manipulatingDOM.html">JAVA</a></li>
             </ul>
         </nav>
     </header>
